crates/dekaf/tests/e2e/snapshots/e2e__migration__after_migration.snap
---
source: crates/dekaf/tests/e2e/migration.rs
assertion_line: 259
expression: extract_ids(&records_after)
---
[
    "D",
    "E",
    "F",
]
