crates/dekaf/tests/e2e/snapshots/e2e__migration__all_consumed.snap
---
source: crates/dekaf/tests/e2e/migration.rs
assertion_line: 277
expression: extract_ids(&all_records)
---
[
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
]
