crates/dekaf/tests/e2e/snapshots/e2e__migration__before_migration.snap
---
source: crates/dekaf/tests/e2e/migration.rs
expression: extract_ids(&records_before)
---
[
    "A",
    "B",
    "C",
]
