crates/dekaf/tests/e2e/snapshots/e2e__migration__post_migration_wrong_password.snap
---
source: crates/dekaf/tests/e2e/migration.rs
expression: wrong_password
---
Some(
    "Failed to connect to any Kafka brokers. Attempted 1 brokers: Failed to connect to tcp://[SOURCE_DEKAF_BROKER]: SASL authentication failed: Error performing SASL authentication: SaslAuthenticationFailed Some(\"Invalid username or password\")",
)
